blur overflow resolved

--- a/src/CompanyPages/Components/CSS/Programs.css
+++ b/src/CompanyPages/Components/CSS/Programs.css
@@ -155,7 +155,7 @@
 }
 {/* Praveen CSS */}
 .guest-profile-login-toast-program{
-    top: 42%;
+    top: 22.5%;
 }
 .infoCard-for-women {
     background: var(--white-100, #FFF);
