--- a/src/CompanyPages/Components/CSS/Testimonial.css
+++ b/src/CompanyPages/Components/CSS/Testimonial.css
@@ -60,15 +60,15 @@
     height: 88%;
     background: transparent; 
     backdrop-filter: blur(5px);
-    z-index: 60;
+    z-index: 1;
 }
 
 .guest-profile-login-toast{
     position: absolute;
-    top: 23%;
+    top: 18%;
     left: 45%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 2;
     width: 28% !important;
     font-weight: 400;
     border-radius: 10px !important;
