--- a/src/CompanyPages/companyPage.css
+++ b/src/CompanyPages/companyPage.css
@@ -4,7 +4,7 @@
     left: 0; /* 0px from the left */
     width: 27%; /* Specify a width */
     height: 100vh; /* Full height */
-    z-index: 1; /* High z-index so it's on top of other content */
+    z-index: 2; /* High z-index so it's on top of other content */
     background-color: white; /* Or any other background color */
     padding-top: 7%;
     margin-left: -2%;
@@ -149,7 +149,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 61;
+    z-index: 3;
     background: transparent; 
     backdrop-filter: blur(5px);
 }
@@ -158,7 +158,7 @@
     top: 10%;
     left: 25%;
     width: 50%;
-    z-index: 61;
+    z-index: 3;
     background: transparent; 
     backdrop-filter: blur(5px);
 }
@@ -251,7 +251,7 @@
         top: 6%;
         left: 15%;
         width: 65%;
-        z-index: 61;
+        z-index: 3;
         background: transparent; 
         backdrop-filter: blur(5px);
     }
@@ -338,7 +338,7 @@ justify-content: center}
     top: 6%;
     left: 5%;
     width: 95%;
-    z-index: 61;
+    z-index: 3;
     background: transparent; 
     backdrop-filter: blur(5px);
 }
@@ -388,7 +388,7 @@ justify-content: center}
         top: 15%;
         left: 10%;
         width: 85%;
-        z-index: 61;
+        z-index: 3;
         background: transparent; 
         backdrop-filter: blur(5px);
     }
